--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-    <title>pupoflix</title>
+    <title>PUPOFOOD</title>
 </head>
 
 <body>
-    <header>GUIMINAMFLIX</header>
+    <header>PUPOFOOD</header>
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>ATRAVÉS DO PUPOVERSO</h1>  
-            <p>#homem-aranha</p>
+            <h1>Comidas da pupo</h1>  
+            <p>receitas</p>
         </div>
 
         <div>
