--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <a href="https://www.youtube.com/watch?v=jRkWreb9eko">
                 <img src="https://img.youtube.com/vi/jRkWreb9eko/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
-                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=uo1Fd_omNgc">
+                <img src="https://img.youtube.com/vi/uo1Fd_omNgc/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
                 <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
