--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <a href="https://www.youtube.com/watch?v=Aqc9mcVKgo4">
                 <img src="https://img.youtube.com/vi/Aqc9mcVKgo4/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
-                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=j7FB5hDZayk">
+                <img src="https://img.youtube.com/vi/j7FB5hDZayk/maxresdefault.jpg" />
             </a>
         </div>
     </section>
